tests/ui/closures/2229_closure_analysis/capture-analysis-1.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/capture-analysis-1.rs:15:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error: First Pass analysis includes:
  --> $DIR/capture-analysis-1.rs:18:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{:?}", p);
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Capturing p[] -> ImmBorrow
  --> $DIR/capture-analysis-1.rs:21:26
   |
LL |         println!("{:?}", p);
   |                          ^
note: Capturing p[(0, 0)] -> ImmBorrow
  --> $DIR/capture-analysis-1.rs:24:26
   |
LL |         println!("{:?}", p.x);
   |                          ^^^
note: Capturing q[(0, 0)] -> ImmBorrow
  --> $DIR/capture-analysis-1.rs:27:26
   |
LL |         println!("{:?}", q.x);
   |                          ^^^
note: Capturing q[] -> ImmBorrow
  --> $DIR/capture-analysis-1.rs:29:26
   |
LL |         println!("{:?}", q);
   |                          ^

error: Min Capture analysis includes:
  --> $DIR/capture-analysis-1.rs:18:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{:?}", p);
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Min Capture p[] -> ImmBorrow
  --> $DIR/capture-analysis-1.rs:21:26
   |
LL |         println!("{:?}", p);
   |                          ^
note: Min Capture q[] -> ImmBorrow
  --> $DIR/capture-analysis-1.rs:29:26
   |
LL |         println!("{:?}", q);
   |                          ^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
